현재까지 작업. mapping이 안됌

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
       path: /h2-console  # H2 Console? Path
   datasource:
     driver-class-name: org.h2.Driver  # Database? H2? ?????.
-    url: jdbc:h2:~/test  # H2 ?? ??
+    url: jdbc:h2:mem:test  # H2 ?? ??
     username: sa  # H2 ?? ? ??? username ?? (??? ??? ??)
     password:
+  debug: true
